[gd_scene load_steps=7 format=2]

[ext_resource path="res://characters/diver/Diver.tscn" type="PackedScene" id=1]
[ext_resource path="res://assets/images/diver.png" type="Texture" id=2]
[ext_resource path="res://characters/competitor/WalkBoard.gd" type="Script" id=3]
[ext_resource path="res://characters/competitor/Jump.gd" type="Script" id=4]
[ext_resource path="res://characters/competitor/Dive.gd" type="Script" id=5]
[ext_resource path="res://characters/competitor/Competitor.gd" type="Script" id=6]

[node name="Competitor" instance=ExtResource( 1 )]
script = ExtResource( 6 )

[node name="Sprite" parent="." index="0"]
texture = ExtResource( 2 )

[node name="DiverStateMachine" parent="." index="3"]
animationPlayerPath = NodePath("../AnimationPlayer")
spritePath = NodePath("../Sprite")

[node name="WalkBoard" parent="DiverStateMachine" index="1"]
script = ExtResource( 3 )

[node name="MoveTimer" type="Timer" parent="DiverStateMachine/WalkBoard" index="2"]
one_shot = true

[node name="Jump" parent="DiverStateMachine" index="3"]
script = ExtResource( 4 )

[node name="Dive" parent="DiverStateMachine" index="5"]
script = ExtResource( 5 )

[node name="StrikePoseTimer" type="Timer" parent="DiverStateMachine/Dive" index="2"]
one_shot = true

[connection signal="timeout" from="DiverStateMachine/WalkBoard/MoveTimer" to="DiverStateMachine/WalkBoard" method="_on_MoveTimer_timeout"]
[connection signal="timeout" from="DiverStateMachine/Dive/StrikePoseTimer" to="DiverStateMachine/Dive" method="_on_StrikePoseTimer_timeout"]
